--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^0.17.1",
     "base-64": "^0.1.0",
     "express": "^4.16.2",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-popperjs": "^1.2.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
