--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+  },
+  "devDependencies": {
     "axios": "^0.17.1",
     "base-64": "^0.1.0",
     "bootstrap": "^4.0.0",
-    "express": "^4.16.2",
     "vue": "^2.5.2",
-    "vue-popperjs": "^1.2.5"
-  },
-  "devDependencies": {
+    "vue-popperjs": "^1.2.5",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
